--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+wwwroot/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -286,3 +286,13 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+# Solution specific entries
+fonts/
+dist/
+*.css
+*.js
+![Gg]runtfile.js
+!karma.conf.js
+package-lock.json
+!systemjs.config.js
