Self decode of png almost works... but for now will use the standard library

--- a/tests/CorePDF.IntegrationTests/CorePDF.IntegrationTests.csproj
+++ b/tests/CorePDF.IntegrationTests/CorePDF.IntegrationTests.csproj
@@ -16,6 +16,9 @@
     <Content Include="..\..\editor\CorePDF.Editor.Presentation\src\assets\smiley.jpg" Link="smiley.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\..\editor\CorePDF.Editor.Presentation\src\assets\square.gif" Link="square.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\..\editor\CorePDF.Editor.Presentation\src\assets\square.jpg" Link="square.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
