Added ability to represent SVG files as PDF drawrings rather than rasterisd images

--- a/tests/CorePDF.IntegrationTests/CorePDF.IntegrationTests.csproj
+++ b/tests/CorePDF.IntegrationTests/CorePDF.IntegrationTests.csproj
@@ -28,6 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\editor\CorePDF.Editor.Presentation\src\assets\sample.svg" Link="sample.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
