--- a/src/CorePDF.csproj
+++ b/src/CorePDF.csproj
@@ -5,7 +5,7 @@
     <Description>A basic PDF document generation library for .Net Core</Description>
     <Authors>CorePDF Contributors</Authors>
     <Company />
-    <Version>0.1.0-alpha</Version>
+    <Version>0.2.1-alpha</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>2017 CorePDF Contributors</Copyright>
     <PackageProjectUrl>https://github.com/GZidar/CorePDF</PackageProjectUrl>
@@ -14,6 +14,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>pdf-generation pdf .NETCore</PackageTags>
     <PackageIconUrl>https://github.com/GZidar/CorePDF/src/corepdf.png</PackageIconUrl>
+    <AssemblyVersion>0.2.1.0</AssemblyVersion>
+    <FileVersion>0.2.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
