--- a/CorePDF.nuspec
+++ b/CorePDF.nuspec
@@ -2,7 +2,7 @@
 <package>
     <metadata minClientVersion="2.0">
         <id>CorePDF</id>
-        <version>0.1.0</version>
+        <version>0.2.3-beta</version>
         <title>CorePDF</title>
         <authors>CorePDF Contributors</authors>
         <owners>CorePDF Contributors</owners>
@@ -14,9 +14,9 @@
         <copyright>Copyright © 2017 CorePDF Contributors</copyright>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <dependencies>
-            <dependency id="Newtonsoft.json" version="10.0.1" />
-            <dependency id="SharpZipLib.NETStandard" version="0.86.0.1" />
-            <dependency id="SixLabors.ImageSharp" version="1.0.0-beta0001" />
+            <dependency id="Newtonsoft.json" version="10.0.3" />
+            <dependency id="SharpZipLib.NETStandard" version="1.0.7" />
+            <dependency id="SixLabors.ImageSharp" version="1.0.0-beta0002" />
         </dependencies>
         <tags>pdf-generation pdf</tags>
     </metadata>
