--- a/src/CorePDF.csproj
+++ b/src/CorePDF.csproj
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/GZidar/CorePDF</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>pdf-generation pdf .NETCore</PackageTags>
-    <PackageIconUrl>https://github.com/GZidar/CorePDF/src/corepdf.png</PackageIconUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/GZidar/CorePDF/development/src/corepdf.png</PackageIconUrl>
     <AssemblyVersion>0.2.3.0</AssemblyVersion>
     <FileVersion>0.2.3.0</FileVersion>
   </PropertyGroup>
