--- a/src/CorePDF.csproj
+++ b/src/CorePDF.csproj
@@ -5,7 +5,7 @@
     <Description>A basic PDF document generation library for .Net Core</Description>
     <Authors>CorePDF Contributors</Authors>
     <Company />
-    <Version>0.3.0</Version>
+    <Version>0.3.0-beta</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>2017 CorePDF Contributors</Copyright>
     <PackageProjectUrl>https://github.com/GZidar/CorePDF</PackageProjectUrl>
