--- a/src/CorePDF.csproj
+++ b/src/CorePDF.csproj
@@ -1,28 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.2;net461</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <Description>A basic PDF document generation library for .Net Core</Description>
     <Authors>CorePDF Contributors</Authors>
     <Company />
-    <Version>0.5.0-beta</Version>
+    <Version>0.6.0-beta</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>2017 CorePDF Contributors</Copyright>
+    <Copyright>2024 CorePDF Contributors</Copyright>
     <PackageProjectUrl>https://github.com/GZidar/CorePDF</PackageProjectUrl>
     <PackageLicenseUrl></PackageLicenseUrl>
     <RepositoryUrl>https://github.com/GZidar/CorePDF</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>pdf-generation pdf .NETCore</PackageTags>
+    <PackageTags>pdf-generation pdf .NET</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/GZidar/CorePDF/development/src/corepdf.png</PackageIconUrl>
-    <AssemblyVersion>0.5.0.0</AssemblyVersion>
-    <FileVersion>0.5.0.0</FileVersion>
+    <AssemblyVersion>0.6.0.0</AssemblyVersion>
+    <FileVersion>0.6.0.0</FileVersion>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0004" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
