--- a/src/CorePDF.csproj
+++ b/src/CorePDF.csproj
@@ -2,21 +2,21 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0</TargetFrameworks>
-    <Description>A basic PDF document generation library for .Net Core</Description>
+    <Description>A basic PDF document generation library for .Net</Description>
     <Authors>CorePDF Contributors</Authors>
     <Company />
-    <Version>0.6.0-beta</Version>
+    <Version>0.6.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>2024 CorePDF Contributors</Copyright>
     <PackageProjectUrl>https://github.com/GZidar/CorePDF</PackageProjectUrl>
-    <PackageLicenseUrl></PackageLicenseUrl>
     <RepositoryUrl>https://github.com/GZidar/CorePDF</RepositoryUrl>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>git</RepositoryType>
     <PackageTags>pdf-generation pdf .NET</PackageTags>
-    <PackageIconUrl>https://raw.githubusercontent.com/GZidar/CorePDF/development/src/corepdf.png</PackageIconUrl>
     <AssemblyVersion>0.6.0.0</AssemblyVersion>
     <FileVersion>0.6.0.0</FileVersion>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
+    <PackageIcon>corepdf.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,11 +25,9 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\License.txt">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
-
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\License.txt" Pack="true" PackagePath="\"/>
+		<None Include="corepdf.png" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 </Project>
